@@ -1,17 +1,18 @@
-<?xml version='1.0' encoding='utf-8'?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>4.1.0-M1</version>
-		<relativePath /> 
+		<relativePath />
 	</parent>
 
 	<groupId>io.github.hiwepy</groupId>
 	<artifactId>okhttp3-spring-boot-starter</artifactId>
-	<description>Spring Boot Starter For Okhttp 3.x</description>
+	<description>Spring Boot Starter For OkHttp 3.x</description>
 	<version>4.1.x.20260527-SNAPSHOT</version>
 	<name>${project.groupId}:${project.artifactId}</name>
 	<url>https://github.com/hiwepy/${project.artifactId}</url>
@@ -33,7 +34,7 @@
 
 	<developers>
 		<developer>
-			<name>wandl</name>
+			<name>hiwepy</name>
 			<email>hiwepy@gmail.com</email>
 			<roles>
 				<role>developer</role>
@@ -45,7 +46,6 @@
 	<distributionManagement>
 		<repository>
 			<id>2624322-release-6F6h6R</id>
-			<name>Maven Release Repository</name>
 			<url>https://packages.aliyun.com/6927b116e6c3e0425dbdf60d/maven/2624322-release-6f6h6r</url>
 			<releases>
 				<enabled>true</enabled>
@@ -56,7 +56,6 @@
 		</repository>
 		<snapshotRepository>
 			<id>2624322-snapshot-3EoOv3</id>
-			<name>Maven Snapshot Repository</name>
 			<url>https://packages.aliyun.com/6927b116e6c3e0425dbdf60d/maven/2624322-snapshot-3eoov3</url>
 			<releases>
 				<enabled>false</enabled>
@@ -71,7 +70,7 @@
 	<build>
 		<pluginManagement>
 			<plugins>
-				
+				<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
@@ -83,7 +82,7 @@
 						<maxmem>512M</maxmem>
 					</configuration>
 				</plugin>
-				
+				<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-enforcer-plugin -->
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-enforcer-plugin</artifactId>
@@ -99,13 +98,13 @@
 								<rules>
 									<requireMavenVersion>
 										<message>
-	                                        You are running an older version of Maven. This application requires at least Maven ${maven.version}.
+											<![CDATA[You are running an older version of Maven. This application requires at least Maven ${maven.version}.]]>
 										</message>
 										<version>[${maven.version}.0,)</version>
 									</requireMavenVersion>
 									<requireJavaVersion>
 										<message>
-	                                        You are running an older version of Java. This application requires at least JDK ${java.version}.
+											<![CDATA[You are running an older version of Java. This application requires at least JDK ${java.version}.]]>
 										</message>
 										<version>[${java.version}.0,)</version>
 									</requireJavaVersion>
@@ -114,7 +113,7 @@
 						</execution>
 					</executions>
 				</plugin>
-				
+				<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-gpg-plugin -->
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-gpg-plugin</artifactId>
@@ -129,7 +128,7 @@
 						</execution>
 					</executions>
 				</plugin>
-				
+				<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-resources-plugin -->
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-resources-plugin</artifactId>
@@ -138,7 +137,7 @@
 						<encoding>${project.build.sourceEncoding}</encoding>
 					</configuration>
 				</plugin>
-				
+				<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-release-plugin -->
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-release-plugin</artifactId>
@@ -151,7 +150,7 @@
 						<goals>deploy</goals>
 					</configuration>
 				</plugin>
-				
+				<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-source-plugin -->
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-source-plugin</artifactId>
@@ -165,18 +164,20 @@
 						</execution>
 					</executions>
 				</plugin>
-				
+				<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>${maven-surefire-plugin.version}</version>
 					<configuration>
-						
+						<!-- 跳过单元测试 -->
 						<skip>true</skip>
 						<skipTests>true</skipTests>
-						
-						
-						<argLine>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m -Dfile.encoding=UTF-8</argLine>
+						<!-- forkMode 可设置值有 "never"， "once"， "always" 和 "pertest"。 pretest：
+							每一个测试创建一个新进程，为每个测试创建新的JVM是单独测试的最彻底方式，但也是最慢的，不适合hudson上持续回归。 once：在一个进程中进行所有测试。once为默认设置，在Hudson上持续回归时建议使用默认设置。
+							always：在一个进程中并行的运行脚本，Junit4.7以上版本才可以使用，surefire的版本要在2.6以上提供这个功能，其中 threadCount：执行时，指定可分配的线程数量。只和参数parallel配合使用有效。默认：5。 -->
+						<forkMode>once</forkMode>
+						<argLine>-Xmx1024m -Dfile.encoding=UTF-8</argLine>
 						<additionalClasspathElements>
 							<additionalClasspathElement>${basedir}/target/test-classes</additionalClasspathElement>
 						</additionalClasspathElements>
@@ -188,7 +189,7 @@
 						</excludes>
 					</configuration>
 				</plugin>
-				
+				<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-jar-plugin -->
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-jar-plugin</artifactId>
@@ -203,7 +204,7 @@
 						</archive>
 					</configuration>
 				</plugin>
-				
+				<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-javadoc-plugin -->
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-javadoc-plugin</artifactId>
@@ -232,7 +233,7 @@
 						<serverId>ossrh</serverId>
 						<nexusUrl>https://oss.sonatype.org/</nexusUrl>
 						<autoReleaseAfterClose>true</autoReleaseAfterClose>
-						
+						<!-- <sslAllowAll>true</sslAllowAll> -->
 						<stagingProgressPauseDurationSeconds>60</stagingProgressPauseDurationSeconds>
 						<stagingProgressTimeoutMinutes>20</stagingProgressTimeoutMinutes>
 						<detectBuildFailures>true</detectBuildFailures>
@@ -241,49 +242,41 @@
 			</plugins>
 		</pluginManagement>
 		<plugins>
-			
-			<!--环境监察插件：代码编译前的环境监察 -->
+			<!--环境检查插件：代码编译前的环境检查 -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-enforcer-plugin</artifactId>
 			</plugin>
-			
 			<!-- 编译插件：编译主代码至主输出目录 -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 			</plugin>
-			
 			<!-- 资源插件：复制主资源文件至主输出目录 -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
 			</plugin>
-			
 			<!-- 单元测试插件 ：执行测试用例 -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 			</plugin>
-			
 			<!-- jar包生成插件 ：创建项目jar包 -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
 			</plugin>
-			
 			<!-- 源码插件:发布时自动将源码同时发布 -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
 			</plugin>
-			
 			<!-- 安装插件：将项目输出构件安装到本地仓库 -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-install-plugin</artifactId>
 			</plugin>
-			
 			<!-- 发布插件 ：将项目输出构件部署到远程仓库 -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -295,9 +288,9 @@
 	<profiles>
 		<profile>
 			<id>disable-javadoc-doclint</id>
-				<activation>
-					<jdk>[1.8,)</jdk>
-				</activation>
+			<activation>
+				<jdk>[1.8,)</jdk>
+			</activation>
 			<properties>
 				<additionalparam>-Xdoclint:none</additionalparam>
 			</properties>
@@ -306,57 +299,57 @@
 			<id>release</id>
 			<build>
 				<plugins>
-					
+					<!--环境检查插件：代码编译前的环境检查 -->
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-enforcer-plugin</artifactId>
 					</plugin>
-					
+					<!-- 编译插件：编译主代码至主输出目录 -->
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-compiler-plugin</artifactId>
 					</plugin>
-					
+					<!-- 资源插件：复制主资源文件至主输出目录 -->
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-resources-plugin</artifactId>
 					</plugin>
-					
+					<!-- 单元测试插件 ：执行测试用例 -->
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-surefire-plugin</artifactId>
 					</plugin>
-					
+					<!-- jar包生成插件 ：创建项目jar包 -->
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-jar-plugin</artifactId>
 					</plugin>
-					
+					<!-- 源码插件:发布时自动将源码同时发布 -->
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-source-plugin</artifactId>
 					</plugin>
-					
+					<!-- javadoc -->
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-javadoc-plugin</artifactId>
 					</plugin>
-					
+					<!-- 安装插件：将项目输出构件安装到本地仓库 -->
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-install-plugin</artifactId>
 					</plugin>
-					
+					<!-- 签名插件：对构建的jar、javadoc、source使用gpg来签名 -->
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-gpg-plugin</artifactId>
 					</plugin>
-					
+					<!-- 发布插件 ：将项目输出构件部署到远程仓库 -->
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-deploy-plugin</artifactId>
 					</plugin>
-					
+					<!-- 版本自动升级插件 ：重置版本号 -->
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-release-plugin</artifactId>
@@ -374,31 +367,13 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>21</java.version>
-        <maven.compiler.release>${java.version}</maven.compiler.release>
-		
-		<maven.version>3.9.9</maven.version>
-		<maven.compiler.source>${java.version}</maven.compiler.source>
-		<maven.compiler.target>${java.version}</maven.compiler.target>
-		<maven-antrun-plugin.version>3.1.0</maven-antrun-plugin.version>
-		<maven-clean-plugin.version>3.4.0</maven-clean-plugin.version>
-		<maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
-		<maven-dependency-plugin.version>3.8.0</maven-dependency-plugin.version>
-		<maven-deploy-plugin.version>3.1.3</maven-deploy-plugin.version>
-		<maven-enforcer-plugin.version>3.5.0</maven-enforcer-plugin.version>
-		<maven-gpg-plugin.version>3.2.6</maven-gpg-plugin.version>
-		<maven-failsafe-plugin.version>3.0.0</maven-failsafe-plugin.version>
-		<maven-help-plugin.version>3.5.0</maven-help-plugin.version>
-		<maven-install-plugin.version>3.1.3</maven-install-plugin.version>
-		<maven-invoker-plugin.version>3.8.0</maven-invoker-plugin.version>
-		<maven-jar-plugin.version>3.4.2</maven-jar-plugin.version>
-		<maven-javadoc-plugin.version>3.8.0</maven-javadoc-plugin.version>
-		<maven-nexus-staging-plugin.version>1.7.0</maven-nexus-staging-plugin.version>
-		<maven-release-plugin.version>3.1.1</maven-release-plugin.version>
-		<maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
-		<maven-shade-plugin.version>3.6.0</maven-shade-plugin.version>
-		<maven-source-plugin.version>3.3.1</maven-source-plugin.version>
-		<maven-surefire-plugin.version>3.5.0</maven-surefire-plugin.version>
-		<maven-war-plugin.version>3.4.0</maven-war-plugin.version>
+		<maven.version>3.0</maven.version>
+		<maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
+		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
+		<maven-release-plugin.version>2.5.3</maven-release-plugin.version>
+		<maven-resources-plugin.version>3.1.0</maven-resources-plugin.version>
+		<maven-surefire-plugin.version>2.22.1</maven-surefire-plugin.version>
+		<maven-nexus-staging-plugin.version>1.6.8</maven-nexus-staging-plugin.version>
 		<okhttp3.version>4.12.0</okhttp3.version>
 		<okhttp3-extension.version>3.0.x-SNAPSHOT</okhttp3-extension.version>
 		<okhttp3-metrics.version>3.0.x-SNAPSHOT</okhttp3-metrics.version>
@@ -406,25 +381,32 @@
 
 	<dependencies>
 
-		
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
 		<dependency>
-		    <groupId>org.projectlombok</groupId>
-		    <artifactId>lombok</artifactId>
-		    <scope>compile</scope>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<scope>compile</scope>
+		</dependency>
+
+		<!-- Java Servlet API -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<optional>true</optional>
 		</dependency>
 
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 		</dependency>
-		
+		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-simple</artifactId>
 			<scope>test</scope>
 		</dependency>
 
-		
+		<!-- Core starter, including auto-configuration support, logging and YAML -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
@@ -435,19 +417,19 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		
+		<!-- Spring Boot Test 依赖 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
+		<!-- @ConfigurationProperties annotation processing (metadata for IDEs) -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-configuration-processor</artifactId>
 			<optional>true</optional>
 		</dependency>
-		
+		<!-- Compile dependencies -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-autoconfigure</artifactId>
@@ -464,17 +446,19 @@
 			<groupId>com.github.ben-manes.caffeine</groupId>
 			<artifactId>caffeine</artifactId>
 		</dependency>
+
+		<!-- OkHttp3 -->
 		<dependency>
-		    <groupId>com.squareup.okhttp3</groupId>
-		    <artifactId>okhttp</artifactId>
+			<groupId>com.squareup.okhttp3</groupId>
+			<artifactId>okhttp</artifactId>
 		</dependency>
 		<dependency>
-		    <groupId>com.squareup.okhttp3</groupId>
-		    <artifactId>logging-interceptor</artifactId>
+			<groupId>com.squareup.okhttp3</groupId>
+			<artifactId>logging-interceptor</artifactId>
 		</dependency>
 		<dependency>
-		    <groupId>com.squareup.okhttp3</groupId>
-		    <artifactId>okhttp-dnsoverhttps</artifactId>
+			<groupId>com.squareup.okhttp3</groupId>
+			<artifactId>okhttp-dnsoverhttps</artifactId>
 		</dependency>
 
 		<!-- OkHttp3 Extension (pure Java) -->
@@ -489,5 +473,7 @@
 			<artifactId>okhttp3-metrics-prometheus</artifactId>
 			<version>${okhttp3-metrics.version}</version>
 		</dependency>
+
 	</dependencies>
+
 </project>
